Need to fix firewall issue.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.servlet.context-path=/qod
 server.use-forward-headers=true
+server.port=80
 
 spring.thymeleaf.enabled=true
 # Set following to true in production
