Modified post and get methods.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+oauth.clientId=1040071405013-qu40hingnnofeaps63bed4lvp581bhdf.apps.googleusercontent.com
